@@ -1,5 +1,6 @@
 Version 6.7.1
 - Added a memory read optimization in -O2, courtesy of Ada
+- Added a peephole optimization for WRBYTE x,y after AND x,#255
 - Fixed a problem in DEBUG() printing functions with multiple return values
 
 Version 6.7.0
